--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,1 +1,20 @@
-<p>admin works!</p>
+<table>
+  <thead>
+    <tr>
+      <th>Produto</th>
+      <th>Preço</th>
+      <th>Deletar</th>
+    </tr>
+  </thead>
+  <tbody>
+    @for (product of products(); track product.id) {
+    <tr>
+      <td>{{ product.title }}</td>
+      <td>{{ product.price | currency : 'BRL' }}</td>
+      <td>
+        <button type="button" (click)="onDelete(product.id)">Deletar</button>
+      </td>
+    </tr>
+    }
+  </tbody>
+</table>
