--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -1,12 +1,16 @@
 <section>
   @if (product()) {
-  <img [src]="product().image" alt="{{ product().title }}" />
-  <div>
-    <h3>{{ product().title }}</h3>
-    <p>{{ product().price }}</p>
-    <p>{{ product().description }}</p>
+  <div class="img-container">
+    <img [src]="product().image" alt="{{ product().title }}" />
   </div>
-  <button type="button" (click)="onAddToCart()">Adicionar ao carrinho</button>
+  <div class="info-container">
+    <div class="product-description">
+      <h3 class="title">{{ product().title }}</h3>
+      <p class="price">{{ product().price | currency : 'BRL' : 'symbol' : '1.2-2' }}</p>
+      <p class="description">{{ product().description }}</p>
+    </div>
+  </div>
+  <button type="button" (click)="onAddToCart()" class="secondary">Adicionar ao carrinho</button>
   } @else {
   <p>Carregando detalhes do produto...</p>
   }
